<resources>
    <string name="app_name">SkateSpotApp</string>
    <string name="map_api_key" translatable="false">key</string>

    <!-- Login screen -->
    <string name="login_header">Skate Spot Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_loginButton">Login</string>
    <string name="login_success">Logged in successfully</string>
    <string name="login_fail">Failed to login</string>

    <!-- Detail Screen -->
    <string name="detail_show_location">Show Location</string>

    <!-- Skate Spot List Screen -->
    <string name="skate_spot_list_head">Skate Spots</string>
    <string name="security_level_pre">Security Level: </string>
    <!-- Option Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_set_filter">Security Filter</string>
    <string name="menu_add_entry">Add New Spot</string>

    <!-- Preferences -->
    <string name="preferences_zoom_restriction">Zoom Restriction</string>
    <string name="preferences_zoom_restriction_summary">If disabled, the mapview will have no zoom bounds.</string>

    <string name="preferences_marker_color">Marker Color</string>
    <string name="preferences_marker_color_summary">Sets the color of the marker in the mapview.</string>
    <string name="preferences_marker_color_red">Red</string>
    <string name="preferences_marker_color_green">Green</string>
    <string name="preferences_marker_color_blue">Blue</string>

    <!-- Add Spot -->
    <string name="add_header">Add New Spot</string>
    <string name="add_name">Name</string>
    <string name="add_security_level">Security Level</string>
    <string name="add_description">Description</string>
    <string name="add_location">Set Location</string>

    <string name="add_location_good">Location Added!</string>
    <string name="add_location_bad">Location Was Not Added!</string>

    <string name="add_good">Skate spot uploaded!</string>
    <string name="add_bad">Please enter all fields!</string>
    <string name="add_error">SkateSpot failed to upload to Firestore!</string>

    <!-- Security Level -->
    <string name="security_level_low">Low</string>
    <string name="security_level_medium">Medium</string>
    <string name="security_level_high">High</string>

    <!-- Filter Activity -->
    <string name="filter_head">Set Filter</string>
    <string name="filter_reset">Reset Filter</string>

</resources>